--- a/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
@@ -18,7 +18,7 @@
 @import '../ExpandableSection/mixins';
 
 /* For commentary, to avoid super wide lines of text in large windows.  */
-$max-column-width: 66em;
+$max-column-width: 77em;
 
 /** Terminal font size */
 $terminal-font-size: 0.875rem;
